--- a/package.json
+++ b/package.json
@@ -45,25 +45,26 @@
   },
   "homepage": "https://github.com/sparkfabrik/sparkfabrik-react-native-idfa-aaid#readme",
   "devDependencies": {
-    "@commitlint/config-conventional": "^11.0.0",
+    "@commitlint/config-conventional": "^12.1.1",
     "@react-native-community/bob": "^0.17.1",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@release-it/conventional-changelog": "^2.0.0",
-    "@types/jest": "^26.0.20",
-    "@types/react": "^17.0.2",
-    "@types/react-native": "^0.63.49",
-    "commitlint": "^11.0.0",
-    "eslint": "^7.20.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "husky": "^5.0.9",
+    "@release-it/conventional-changelog": "^2.0.1",
+    "@types/jest": "^26.0.23",
+    "@types/react": "^17.0.4",
+    "@types/react-native": "^0.64.4",
+    "commitlint": "^12.1.1",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
-    "pod-install": "^0.1.18",
+    "pod-install": "^0.1.21",
     "prettier": "^2.2.1",
-    "react": "^17.0.1",
-    "react-native": "^0.63.4",
-    "release-it": "^14.4.0",
-    "typescript": "^4.1.5"
+    "react": "^17.0.2",
+    "react-native": "^0.64.0",
+    "release-it": "^14.6.1",
+    "typescript": "^4.2.4",
+    "y18n": "5.0.8"
   },
   "peerDependencies": {
     "react": "*",
